<resources>
    <string name="app_name">Ghost</string>
    <string name="action_settings">Settings</string>

    <!-- In Game -->
    <string name="gibberish">&#160;gibberish.</string>
    <string name="existing_word">&#160;an existing word.</string>


    <!-- Dialog Builder-->
    <string name="create_player">Create</string>
    <string name="enter_player">Enter the name of the new player</string>
    <string name="cancel_player">Cancel</string>


    <!-- Android Manifest-->
    <string name="won">You won!</string>
    <string name="select_players">Select players</string>
    <string name="choose_player">Choose the player\'s name</string>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="tutorial">Tutorial</string>

    <!-- Settings -->
    <string name="in_game_changed">Changes will be effective after restarting the game</string>

    <!-- NameList-->
    <string name="no_name_entered">Please enter a name</string>
    <string name="existing_name_entered">Already Exists!</string>

    <!-- Choose Players text-->
    <string name="choose_p1_text">Choose Player 1</string>
    <string name="choose_p2_text">Choose Player 2</string>
    <string name="start_game_text">START GAME</string>
    <string name="loading_game_text">LOADING&#8230;</string>
    <string name="same_players_chosen">Please choose two different players</string>

    <!--Choosing the language-->
    <string name="language_title">Set lexicon language</string>
    <string name="language_dialog_title">Pick a language</string>
    <array name="language_values">
        <item>english.txt</item>
        <item>dutch.txt</item>

    <!-- Lexicon language settings entries-->
    </array>
    <array name="language_entries">
        <item>English</item>
        <item>Dutch</item>
    </array>
    <string name="language_default">english.txt</string>


    <!--Tutorial text-->
    <string name="tutorial_text_1">Ghost is a word game in which players take turns adding letters to a growing word fragment, trying not to be the one to complete a valid word.</string>
    <string name="tutorial_text_2"> Each fragment must be the beginning of an actual word. Words are checked when they have four characters or more.</string>
    <string name="tutorial_text_3">The player who completes a word loses the game. Another way of losing is by adding a letter to the word fragment, forming a non-existing word.</string>

    <!-- Winning screen  -->
    <string name="winning_verb"> WON!</string>
    <string name="spelling_verb"> spelled \"</string>
    <string name="winning_relative_pronoun">\", which is</string>
    <string name="home_button_description">Returns the player to the main screen of the application</string>
    <string name="reset_button_description">Starts another game with the same players</string>
    <string name="leaderboard_button_description">Shows the leaderboard</string>


    <!-- Leaderboard-->
    <string name="leaderboard_sourcefile">leaderboard.txt</string>
    <color name="back_colour">#f8f2da</color>

</resources>
