<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_colour">

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/p1name_template"
        android:text="@string/choose_p1_text"
        android:textSize="9pt"
        android:textStyle="bold"
        android:onClick="choosePlayer"
        android:id="@+id/choose_p1_button"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/p2name_template"
        android:text="@string/choose_p2_text"
        android:textSize="9pt"
        android:textStyle="bold"
        android:onClick="choosePlayer"
        android:id="@+id/choose_p2_button"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/start_game_text_template"
        android:text="@string/start_game_text"
        android:textSize="9pt"
        android:textStyle="bold"
        android:onClick="playGame"
        android:id="@+id/start_game_button"/>

</LinearLayout>