<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_colour">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17pt"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/winner_essential_message"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="9pt"
            android:id="@+id/winner_details_message"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/reset_button"
            android:onClick="resetGame"
            android:contentDescription="@string/reset_button_description"
            />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/home_button"
            android:onClick="returnHome"
            android:contentDescription="@string/home_button_description"
            />

    </LinearLayout>

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/leaderboard_button"
        android:onClick="showLeaderboard"
        android:contentDescription="@string/leaderboard_button_description"
        />

</LinearLayout>